[project]
name = "chat-pdf-via-rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "langchain>=0.3.27",
    "langchain-community>=0.3.29",
    "streamlit>=1.22.0",
    "streamlit-chat>=0.1.1",
    "chromadb>=0.4.0",
    "fastembed>=0.3.0",
    "pypdf>=3.0.0",
    "ollama>=0.1.0",
]
